--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "axios": "^0.19.2",
     "expo": "~38.0.8",
+    "expo-camera": "~8.3.1",
+    "expo-file-system": "~9.0.1",
+    "expo-image-picker": "~8.3.0",
+    "expo-location": "~8.2.1",
+    "expo-permissions": "~9.0.1",
+    "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
@@ -26,14 +34,7 @@
     "react-navigation-tabs": "^2.9.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-image-picker": "~8.3.0",
-    "expo-permissions": "~9.0.1",
-    "expo-camera": "~8.3.1",
-    "expo-file-system": "~9.0.1",
-    "expo-sqlite": "~8.2.1",
-    "expo-location": "~8.2.1",
-    "react-native-maps": "0.27.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
